[package]
name = "tokio-postgres-on-workers"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow="1"
getrandom = { version = "0.3", features = ["wasm_js"] }
worker = { version = "0.5.0", features=["tokio-postgres"] }
tokio-postgres = { version="0.7.13", features=['js'], default-features=false }

[profile.release]
lto = true
strip = true
codegen-units = 1
